--- a/pandas_exercises-master/06_Stats/Wind_Stats/Exercises.ipynb
+++ b/pandas_exercises-master/06_Stats/Wind_Stats/Exercises.ipynb
@@ -27,9 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -64,21 +62,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "### Step 1. Import the necessary libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,12 +93,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv('wind.data', sep='\\s+', parse_dates=[[0, 1, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6574 entries, 0 to 6573\n",
+      "Data columns (total 13 columns):\n",
+      "Yr_Mo_Dy    6574 non-null datetime64[ns]\n",
+      "RPT         6568 non-null float64\n",
+      "VAL         6571 non-null float64\n",
+      "ROS         6572 non-null float64\n",
+      "KIL         6569 non-null float64\n",
+      "SHA         6572 non-null float64\n",
+      "BIR         6574 non-null float64\n",
+      "DUB         6571 non-null float64\n",
+      "CLA         6572 non-null float64\n",
+      "MUL         6571 non-null float64\n",
+      "CLO         6573 non-null float64\n",
+      "BEL         6574 non-null float64\n",
+      "MAL         6570 non-null float64\n",
+      "dtypes: datetime64[ns](1), float64(12)\n",
+      "memory usage: 667.8 KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yr_Mo_Dy</th>\n",
+       "      <th>RPT</th>\n",
+       "      <th>VAL</th>\n",
+       "      <th>ROS</th>\n",
+       "      <th>KIL</th>\n",
+       "      <th>SHA</th>\n",
+       "      <th>BIR</th>\n",
+       "      <th>DUB</th>\n",
+       "      <th>CLA</th>\n",
+       "      <th>MUL</th>\n",
+       "      <th>CLO</th>\n",
+       "      <th>BEL</th>\n",
+       "      <th>MAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2061-01-01</td>\n",
+       "      <td>15.04</td>\n",
+       "      <td>14.96</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>9.29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.87</td>\n",
+       "      <td>13.67</td>\n",
+       "      <td>10.25</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>12.58</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>15.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2061-01-02</td>\n",
+       "      <td>14.71</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>12.62</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>11.50</td>\n",
+       "      <td>10.04</td>\n",
+       "      <td>9.79</td>\n",
+       "      <td>9.67</td>\n",
+       "      <td>17.54</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2061-01-03</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>16.88</td>\n",
+       "      <td>12.33</td>\n",
+       "      <td>10.13</td>\n",
+       "      <td>11.17</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>11.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>12.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2061-01-04</td>\n",
+       "      <td>10.58</td>\n",
+       "      <td>6.63</td>\n",
+       "      <td>11.75</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>8.63</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>5.46</td>\n",
+       "      <td>10.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2061-01-05</td>\n",
+       "      <td>13.33</td>\n",
+       "      <td>13.25</td>\n",
+       "      <td>11.42</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>10.71</td>\n",
+       "      <td>8.21</td>\n",
+       "      <td>11.92</td>\n",
+       "      <td>6.54</td>\n",
+       "      <td>10.92</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>12.92</td>\n",
+       "      <td>11.83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Yr_Mo_Dy    RPT    VAL    ROS    KIL    SHA   BIR    DUB    CLA    MUL  \\\n",
+       "0 2061-01-01  15.04  14.96  13.17   9.29    NaN  9.87  13.67  10.25  10.83   \n",
+       "1 2061-01-02  14.71    NaN  10.83   6.50  12.62  7.67  11.50  10.04   9.79   \n",
+       "2 2061-01-03  18.50  16.88  12.33  10.13  11.17  6.17  11.25    NaN   8.50   \n",
+       "3 2061-01-04  10.58   6.63  11.75   4.58   4.54  2.88   8.63   1.79   5.83   \n",
+       "4 2061-01-05  13.33  13.25  11.42   6.17  10.71  8.21  11.92   6.54  10.92   \n",
+       "\n",
+       "     CLO    BEL    MAL  \n",
+       "0  12.58  18.50  15.04  \n",
+       "1   9.67  17.54  13.83  \n",
+       "2   7.67  12.75  12.71  \n",
+       "3   5.88   5.46  10.88  \n",
+       "4  10.34  12.92  11.83  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.info()\n",
+    "data.describe()\n",
+    "data.shape\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.astype({'Yr': 'date'})\n",
+    "# Would have worked but should use to datetime\n",
+    "\n",
+    "# pd.to_datetime()\n",
+    "\n",
+    "\n",
+    "# What I should be doing is handling this in the DataFrame creation via parse_date"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,12 +303,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.unique of 0      2061-01-01\n",
+       "1      2061-01-02\n",
+       "2      2061-01-03\n",
+       "3      2061-01-04\n",
+       "4      2061-01-05\n",
+       "5      2061-01-06\n",
+       "6      2061-01-07\n",
+       "7      2061-01-08\n",
+       "8      2061-01-09\n",
+       "9      2061-01-10\n",
+       "10     2061-01-11\n",
+       "11     2061-01-12\n",
+       "12     2061-01-13\n",
+       "13     2061-01-14\n",
+       "14     2061-01-15\n",
+       "15     2061-01-16\n",
+       "16     2061-01-17\n",
+       "17     2061-01-18\n",
+       "18     2061-01-19\n",
+       "19     2061-01-20\n",
+       "20     2061-01-21\n",
+       "21     2061-01-22\n",
+       "22     2061-01-23\n",
+       "23     2061-01-24\n",
+       "24     2061-01-25\n",
+       "25     2061-01-26\n",
+       "26     2061-01-27\n",
+       "27     2061-01-28\n",
+       "28     2061-01-29\n",
+       "29     2061-01-30\n",
+       "          ...    \n",
+       "6544   1978-12-02\n",
+       "6545   1978-12-03\n",
+       "6546   1978-12-04\n",
+       "6547   1978-12-05\n",
+       "6548   1978-12-06\n",
+       "6549   1978-12-07\n",
+       "6550   1978-12-08\n",
+       "6551   1978-12-09\n",
+       "6552   1978-12-10\n",
+       "6553   1978-12-11\n",
+       "6554   1978-12-12\n",
+       "6555   1978-12-13\n",
+       "6556   1978-12-14\n",
+       "6557   1978-12-15\n",
+       "6558   1978-12-16\n",
+       "6559   1978-12-17\n",
+       "6560   1978-12-18\n",
+       "6561   1978-12-19\n",
+       "6562   1978-12-20\n",
+       "6563   1978-12-21\n",
+       "6564   1978-12-22\n",
+       "6565   1978-12-23\n",
+       "6566   1978-12-24\n",
+       "6567   1978-12-25\n",
+       "6568   1978-12-26\n",
+       "6569   1978-12-27\n",
+       "6570   1978-12-28\n",
+       "6571   1978-12-29\n",
+       "6572   1978-12-30\n",
+       "6573   1978-12-31\n",
+       "Name: Yr_Mo_Dy, Length: 6574, dtype: datetime64[ns]>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Yr_Mo_Dy['']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,9 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -146,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -163,7 +422,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -180,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -198,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -216,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -233,9 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -249,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -265,9 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -281,9 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -299,9 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -315,32 +557,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
